# ChangeLog for net-fs/autofs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.107 2011/05/15 11:03:49 pva Exp $

  15 May 2011; Peter Volkov <pva@gentoo.org> autofs-5.0.4-r5.ebuild:
  Add fix for bug #355975 into stable.

*autofs-5.0.5-r3 (30 Apr 2011)

  30 Apr 2011; Peter Volkov <pva@gentoo.org> -autofs-5.0.5-r2.ebuild,
  +autofs-5.0.5-r3.ebuild, files/autofs-5.0.5-fix-building-without-ldap.patch:
  Fix ldap linkage yet again, bug #362551, thank Joshua Rich for report.

  06 Apr 2011; Peter Volkov <pva@gentoo.org> autofs-5.0.5-r2.ebuild,
  +files/autofs-5.0.5-add-missing-endif-HAVE_SASL-in-modules-lookup_ldap.c.patc
  h:
  Fix build issue with USE='ldap -sasl', bug #361899, thank Justin Lecher for
  report and Dustin Polke for this fix.

*autofs-4.1.4 (06 Apr 2011)

  06 Apr 2011; Peter Volkov <pva@gentoo.org> +autofs-4.1.4.ebuild,
  +files/autofs-4.1.4-clean-up-maps.patch,
  +files/autofs-4.1.4-fix-install-ldap-samples-and-maps.patch,
  +files/autofs-4.1.4-fix-man-pages.patch, +files/autofs-4.1.4-init.patch,
  +files/autofs-4.1.4-respect-user-flags-and-fix-asneeded.patch:
  Version bump, bug #324961 thank Dustin Polke for this job.

*autofs-5.0.5-r2 (03 Apr 2011)

  03 Apr 2011; Peter Volkov <pva@gentoo.org> files/autofs5.initd,
  -autofs-5.0.5-r1.ebuild, +autofs-5.0.5-r2.ebuild:
  Use proper if-logic in autofs.initd, bug #361787, thank Piotr Mitas for
  report Dustin Polke for fix

  03 Apr 2011; Peter Volkov <pva@gentoo.org> -autofs-3.1.7-r5.ebuild,
  -autofs-3.1.7-r6.ebuild, -autofs-5.0.4.ebuild, -autofs-5.0.4-r2.ebuild,
  -autofs-5.0.4-r3.ebuild, -autofs-5.0.4-r4.ebuild, -files/autofs.confd,
  -files/autofs.rc10, -files/autofs.rc6, -files/autofs.rc7, -files/autofs.rc8,
  -files/autofs.rc9, -files/autofs1.confd, -files/automount.diff,
  -files/ldap_config.patch, -files/nisyp.patch:
  Drop old, #361773, thank Dustin Polke for this job.

*autofs-5.0.5-r1 (03 Apr 2011)
