@@ -22,6 +22,7 @@ AUX autofs.rc11 7469 RMD160 e8472a75e3804a83cdb31fb1a9e293a87492ba0b SHA1 be29dc
 AUX autofs.rc12 7807 RMD160 bdd91c47ee5c223ca6eb7b395a4f82f36abd26f6 SHA1 a5efe6948c9674c4d2019db5e81de9d0a64ffaca SHA256 dc08949c2d47614be7fcea8be9988de52715b8072753ee3df77a87c19962975c
 AUX autofs.rc13 7876 RMD160 feb761b16f10e90ca55fc25a75b1ada9e79a83e2 SHA1 dadfdea84cf741ede50f5131433f88b09dd05f40 SHA256 d477a63305db5d0cc78e9f538cea745f733ae46305f71986c8a5abce1d2f0c56
 AUX autofs.rc14 7881 RMD160 f801010b880dca90ea76926880af928889b2fe38 SHA1 3d1cb7d1bd9b34035932452ea47dcd291ff7b0b4 SHA256 6d233d75882e93f2139b706df58eb4172dbac1ffe55dd1b4792492db97ab457d
+AUX autofs5-auto.master 756 RMD160 ef587371fbaab6fb119128acfe17e66b37bcb434 SHA1 543c21a7e54bcf00e35c1a8c981a908ea3403a9e SHA256 8651b42b338ffdb8be24ed88893ca90f95d0221f2684274957de154fd89df5cb
 AUX autofs5.initd 1673 RMD160 b2b796c353dead2595e820bf28fa7767a0a8a142 SHA1 03ae74b330b5aca9544cd770f0091f2c19749559 SHA256 68c17d54ad22ea68eeff6fef5a5b0a9ebcb40a03878306984b95567159f3aaeb
 AUX autofs5.rc1 920 RMD160 9adb413578fba86eeabefb2c25b4bf6e27bd8efe SHA1 44db5523bc7d07c949e71bf0fda6499b0c6578d1 SHA256 94c956da80446f391df3a8f89794754c0e42ea9d1fca47f2abe57eecadbc3ffa
 DIST autofs-4.1.3-bad_chdir.patch 6343 RMD160 a406cdaa048c7b44cf93bb05df35bf2f790c6cfb SHA1 4e186624b0faaef1a15632d42615463427142dcb SHA256 ba89a372971daa3d689366f7708ec24034c294e485a88d921fb2eac573f95b0f
@@ -145,6 +146,7 @@ DIST autofs-5.0.4-zero-s_magic-is-valid.patch 1320 RMD160 17b727128f589c744ece5c
 DIST autofs-5.0.4.tar.bz2 303863 RMD160 00708143c56b440fa0c7589c2d0d9170334e7c3e SHA1 0a50408ba2c1f6d27f3a448edc70f2395b6566b5 SHA256 631fe1a3cdc11c66aaf356fc6c0b8e41dff45897c43bb536a29b432e89d8da1b
 DIST autofs-5.0.5-patches-1.tar.lzma 59744 RMD160 4f253dfb04e5f09d16b6101e5121377c3399e399 SHA1 74364fdd40c1b96e788701c5816762e83eb8fb17 SHA256 e94e59fe9c88df727fd7d623be1002250141ea519467bf179dd74ffe797ce2a5
 DIST autofs-5.0.5-patches-3.tar.lzma 77343 RMD160 fc60a2605b65f9926dfd334c86c96ff617e845e4 SHA1 62d528a70b828c26496cd1de003fa15097114464 SHA256 161a397230cf767e1f15c50aeeac7974e407935f81939de29ff9029ae88f96a6
+DIST autofs-5.0.5-patches-4.tar.lzma 85868 RMD160 87f6e0a4f7c2e68e9b45e0ae95fd0ab2b1917152 SHA1 003ea62f6fef6336cb5cc94bcb5f3688507cdf08 SHA256 669a97177fd67bf107bc9cdd188d8a01defe505b8668f83a5e907471e2ff08eb
 DIST autofs-5.0.5.tar.bz2 301327 RMD160 4d105cce439544193b4abcb0ca4763f8c1d3cf54 SHA1 7f8a320cc126cb233be23749669735320fe6933c SHA256 68c73e01bc3c14c7d3613a861bbde4ab601c13f3127fcb837d49e435e5986002
 EBUILD autofs-4.1.3-r7.ebuild 2992 RMD160 7fc94cc967a7756eb9efb3da4a422fbb647c4d2c SHA1 056a5a4710b7275fb47a495985b51a64312412c4 SHA256 e8c538577a1a04659a0ff990b543efdb2dbb61d8b6bbb1cd2c7c1b159a842710
 EBUILD autofs-4.1.3-r9.ebuild 3101 RMD160 29c754ba5407258028cc372ee0d88193224f2ff9 SHA1 4fd3ec05fc46d05148c7ef32f97ee402bf2cb23f SHA256 a895a29abf8ee920cfa87764a30052f2d014d3003fc0421d430d0c2300e233bd
@@ -152,6 +154,7 @@ EBUILD autofs-4.1.4.ebuild 2598 RMD160 05a56cf4e579c38839da3da6907f13ebfbfefcab 
 EBUILD autofs-5.0.3-r6.ebuild 4266 RMD160 f1fedf489dceea7366f0d334d499fcc1db57d824 SHA1 b8dc48046353e6ea3e4bdd7c228d0ed565077634 SHA256 7db072e58681b59a7e04970134ea8c5d37ffc1388e7e64a27280a013886d335a
 EBUILD autofs-5.0.4-r5.ebuild 4984 RMD160 05b95859cc4e26b1f2fed6ae2d390cb3c4adeaed SHA1 4c7956fea61a9017a85aa6d4312ddb4cc2c2f5dd SHA256 77058cde2964a60ec8aaaa953b6ee655cede9d036bdc0db4dbc0860f27b44ccc
 EBUILD autofs-5.0.5-r3.ebuild 3438 RMD160 666a8f707a7047b6b72031cbdf590ef5b6259784 SHA1 4e067f5d5a0bba2d919335e507e137d3db58d191 SHA256 e0bf26d27c3a968e928cfffe8a0d889d9cbe6832dc078896234366bc2db04c5b
+EBUILD autofs-5.0.5-r4.ebuild 3512 RMD160 83a6203c6d7a1a0b3d4ffd8ae13fbc8d36e34c99 SHA1 611d57c08b73b435a7eaefd35c11f45f0193ef1c SHA256 02563195e009de0b52489124b42f4ec7b0d77734d70fae1e2a615ac3403dbba0
 EBUILD autofs-5.0.5.ebuild 2835 RMD160 5c5ca0c11ae8205f85bc8fbec7e2b95f206bbb91 SHA1 0d342ceed013e86f9c7f3a97706bde018843b301 SHA256 5107794cdebe88a072bb8ea82e42b0e17de242da17e032d515fb19a650dab8fe
-MISC ChangeLog 18159 RMD160 2c2c1fbdbab732148c5f2987f6046695eda68bde SHA1 aa7bf7ffbfc25a24e46af6ee7984bba0876b2b43 SHA256 efa4946fb1d3ce343ebfa39d5712ca9f488a3752d613a4521b7de489aff5e23d
+MISC ChangeLog 18371 RMD160 2e5784a7ab96bfcf282c9091c51b156baef30f1d SHA1 92b1c2c9a653f65732d44ead3cab6ac3087f2767 SHA256 2f2ffe7ffea0fba83180a820846675274e6f86b393445673c2ae51ef4f15229f
 MISC metadata.xml 629 RMD160 e54d3bf18dc419c0e900d81ed9aca1432e555d65 SHA1 64893b5cd342d35c9278df1b63fa106629b5ccf4 SHA256 2f9dffb787ccf5f094c9f839c60f32cc78f12546b56da94fec2c1fbb23e07e2b
